# uil-dl

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  buildDB.py  config.py  downloadInfo.py  index.html  info.json  main.py  main.spec  models.py  nuitka_build.py  out.css  package-lock.json  package.json  requirements.txt  runserver.py  setup.iss  startserver.py  tsconfig.json  updateInfo.py  vite.config.mjs
assets/: version.txt
backend/: api.py  downloads.py  mainapp.py
data/: config.json  info.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/Components/: Home.svelte
frontend/src/: app.css  app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/isolation/: index.html
frontend/src-tauri/src/: bindings.rs  download.rs  info.rs  lib.rs  main.rs  models.rs  network.rs  queue.rs  state.rs  user_config.rs
frontend/src-tauri/src/commands/: config.rs  contests.rs  files.rs  info.rs  mod.rs  network.rs  queue.rs
frontend/src/lib/: bindings.ts  tauri.ts  theme.ts  version.ts
frontend/static/: c.1.json
setup/: buildDB.py  downloadInfo.py  manageInfo.py  mylogging.py
static/css/: out.css
static/js/: main.js
templates/: cache_stats.html  contests_table.html  download_error.html  error.html  index.html
v1/: main.py  nuitka_build.py
v1/setup/: localinfojson.py
v1/webapp/: a_c.py  app.py
webapp/: analytics.py  app.py  models.py  splash.py
webapp/templates/: download_success.html  index.html  set_path.html
(+34 files in other folders)
