[package]
name = "uil-dl"
version = "2.0.0"
description = "UIL Academics resource downloader"
authors = ["Shubh Randeria"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "uil_dl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = ["isolation"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "time", "fs"] }
futures-util = "0.3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
opener = "0.7"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2"

# type-safe commands
specta = { version = "2.0.0-rc.20", features = ["chrono"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
